force-app/main/default/objects/Bet__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <label>Game</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Game__c.StartDate__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Bets</relationshipLabel>
    <relationshipName>Bets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>