force-app/main/default/objects/Bet__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <description>avoid players with negative TotalMoneyWon__c</description>
    <label>Player</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Player__c.TotalMoneyWon__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Bets</relationshipLabel>
    <relationshipName>Bets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>