force-app/main/default/objects/Bet__c/validationRules/Forbid_creation_after_game_started.validationRule-meta.xml
<ValidationRule>
    <fullName>Forbid_creation_after_game_started</fullName>
    <active>true</active>
    <description>Forbid creation of the bet after the game is started.</description>
    <errorConditionFormula>AND(
    ISNEW(),
     CreatedDate &gt; Game__r.StartDate__c 
)</errorConditionFormula>
    <errorMessage>Can&apos;t create a bet after the game is started</errorMessage>
</ValidationRule>