force-app/main/default/objects/Bet__c/validationRules/No_bet_for_blacklisted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_bet_for_blacklisted</fullName>
    <active>true</active>
    <description>Do not create the bet for a player in the blacklist.</description>
    <errorConditionFormula>AND(
    ISNEW(),
      Player__r.IsBlackList__c = TRUE
)</errorConditionFormula>
    <errorMessage>Can&apos;t create a bet for blacklisted players</errorMessage>
</ValidationRule>